--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <!--<br><br><br><br><br><br>-->
 				<div style="background-color: rgba(0, 0, 0, 0.6); width:75%; margin:0 auto; text-align: center">
 				<h4 style="text-align: center; font-size: 160%; font-weight: bold">Research Highlights: Migration</h4>
-				<h4 style="text-align: center;font-size: 150%"><i>The Global Flow of People</i></h4>
-				<h5 style="text-align: center;font-size: 120%">Nikola Sander</h5>
+<!--			<h4 style="text-align: center;font-size: 150%"><i>The Global Flow of People</i></h4>
+				<h5 style="text-align: center;font-size: 120%">Nikola Sander</h5>-->	
 				<h5 style="text-align: center;font-size: 120%">Wittgenstein Centre Celebrations,<br> Vienna, September 2015</h5>		
 				</div>
 			</section>
