--- a/index.html
+++ b/index.html
@@ -71,32 +71,12 @@
 			</section>
 			
 			<section>
-				<h3 style="font-size: 165%">UN bilateral stock data facilitated the development of a new methodology for estimating flows from stocks</h3>
-					<table><tr>
-					<td>
-					<h2 style="font-size: 155%; margin: 0px 0 15px 0">UN stock data</h2>
-					<p>lifetime transitions</p>
-					<p>static snapshot</p>
-					<p>1990, 2000, 2010</p>
-					<p>~220 countries</p></td>
-					<td><h2>&#10140; </h2></td>
-					<td style="padding-left:1.5em">
-					<h2 style="font-size: 155%; margin: 0px 0 15px 0">New flow estimates</h2>
-					<p>5-year transitions</p>
-					<p>dynamic movements</p>
-					<p>1990-95 to 2005-10</p>
-					<p>196 countries</p></td>
-					</tr></table>
+				<h3 style="font-size: 165%">Estimating migration flows from UN stock data: <em>0.6%</em> of the world's population move over 5-year periods</h3>
+				<img src="images/global-intensity.png"  width="650">
+				<p style="font-size: 140%">Abel & Sander (2014)<br><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows</a><br> <i>Science</i>, vol. 343: 1520-1522.</p> 				
 			</section>	
 
-			<section>
-				<h2>No rising tide of migration</h2>
-				<p>For every 1,000 people, 6 move between countries.</p>
-				<img src="images/global-intensity.png"  width="800">
-			</section>
-
 			<section data-background="images/science_fig4_step2.png" data-background-size="contain">
-<!--<br><br><br><br><br><br>-->
 			<p style="font-size: 160%;width:70%; margin:0 auto; text-align: center; color:#ff9a15">Circular migration plot</p> 
 			<br>
 			<p style="width:70%; margin:0 auto; text-align: center">Segment length shows a region's migration volume in millions.</p> 
@@ -105,12 +85,6 @@
 			</section>
 
 			<section data-background="images/science_fig4.png" data-background-size="contain">
-				<span class="fragment fade-in" style="margin-bottom:0%">
-				<div style="background-color: rgba(0, 0, 0, 0.65);padding:5px 5px 5px 5px">
-				<h3 style="font-size: 140%;color:#fff; text-align:center">Abel & Sander (2014)<br><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows</a><br> <i>Science</i>, vol. 343: 1520-1522.</h3> 
-				<img src="images/science.png"  width="150" style="margin-left: 40%">
-				</div>
-				</span>
 			</section>
 
 			<section>
@@ -159,7 +133,26 @@
 			</section>
 			
 			<section>
-				<h3 style="font-size: 165%">In the future, economic and demographic shifts will influence migration, but without disrupting the global system of flows</h3>
+				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<img src="images/ger-at1.png"  width="100%">
+				<p style="font-size: 100%; width:80%; margin:0 auto; text-align: center">.</p>							
+			</section>	
+
+			<section>
+				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<img src="images/ger-at2.png"  width="100%">	
+				<p style="font-size: 120%; width:80%; margin:0 auto; text-align: center"><em>There's no such thing as a net migrant!</em></p>			
+			</section>	
+
+			<section>
+				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<img src="images/world-at.png"  width="100%">
+				<p style="font-size: 120%; width:80%; margin:0 auto; text-align: center">Using a spatial aggregation of Andrei Rogers' multi-regional projection model.</p>							
+			</section>	
+
+
+			<section>
+				<h3 style="font-size: 165%">In the future, economic and demographic shifts will influence migration, but without disrupting the global system of flows.</h3>
 				<img src="images/projections-circos.png"  width="100%">
 				<h3 style="font-size: 80%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
 			</section>
