--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>WIC Research Highlights: Migration</title>
+		<title>Research Highlights: Migration</title>
 		<meta name="description" content="Slides for the Wittgenstein Centre Celebrations">
 		<meta name="author" content="Nikola Sander">
 		
@@ -61,17 +61,20 @@
 				<h3 style="font-size: 170%; color:#C3BCA5">international migration flows</h3>
 				</div>
 			</section>
-			
+
 			<section>	
-				<h3 style="font-size: 165%">Cross-national variation in the way of measurement makes data on global migration flows incomparable</h3>
+				<h3 style="font-size: 165%">Migration can be defined in many different ways.</h3>
+				<img src="images/apple-orange.png" width="370" style="margin-left: 30%">
+			</section>
+
+			<section>	
+				<h3 style="font-size: 165%">Two types of migration data:<br> flows & stocks</h3>
 				<img src="images/unflow-2008-cover.png" width="370" style="margin-left: 10%">
 				<img src="images/unstock-2012-cover.png" width="348" style="margin-left: 5%">
-				<h3 style="font-size: 120%;text-align:center;color:#C3BCA5">&nbsp; &nbsp; Flows for <50 countries &nbsp; &nbsp;&nbsp; Stocks for >200 countries</h3>
-				
 			</section>
 			
 			<section>
-				<h3 style="font-size: 165%">Estimating migration flows from UN stock data: <em>0.6%</em> of the world's population move over 5-year periods</h3>
+				<h3 style="font-size: 165%">Our estimates: <em>0.6%</em> of the world's population move over 5-year periods</h3>
 				<img src="images/global-intensity.png"  width="650">
 				<p style="font-size: 140%">Abel & Sander (2014)<br><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows</a><br> <i>Science</i>, vol. 343: 1520-1522.</p> 				
 			</section>	
@@ -85,17 +88,6 @@
 			</section>
 
 			<section data-background="images/science_fig4.png" data-background-size="contain">
-			</section>
-
-			<section>
-				<h2>Spatial patterns</h2>
-				<p>Continuing attractiveness of the US and Europe as destinations.</p>
-				<p>Most migrants move over short distances within the same region or between neighbouring regions.</p>
-				<br>
-				<h2>Trends over time</h2>
-				<p>1990s: Violent conflicts in Rwanda/ Afghanistan, and the fall of the Iron Curtain triggering migration.</p>
-				<p>2000s: The rise of Asia as a global migration hub.</p>
-				<p style="font-size: 110%; text-align:right; color:#ff9a15">explore at www.global-migration.info ...</p>
 			</section>
 
 			<!-- Interactive 	-->
@@ -141,18 +133,18 @@
 			<section>
 				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
 				<img src="images/ger-at2.png"  width="100%">	
-				<p style="font-size: 120%; width:80%; margin:0 auto; text-align: center"><em>There's no such thing as a net migrant!</em></p>			
+				<p style="font-size: 150%; width:80%; margin:0 auto; text-align: center"><em>There's no such thing as a net migrant!</em></p>			
 			</section>	
 
 			<section>
 				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
 				<img src="images/world-at.png"  width="100%">
-				<p style="font-size: 120%; width:80%; margin:0 auto; text-align: center">Using a spatial aggregation of Andrei Rogers' multi-regional projection model.</p>							
+				<p style="font-size: 150%; width:80%; margin:0 auto; text-align: center">Using a spatial aggregation of Andrei Rogers' multi-regional projection model.</p>							
 			</section>	
 
 
 			<section>
-				<h3 style="font-size: 165%">In the future, economic and demographic shifts will influence migration, but without disrupting the global system of flows.</h3>
+				<h3 style="font-size: 165%">The global migration system: <br> today and in 2055-60</h3>
 				<img src="images/projections-circos.png"  width="100%">
 				<h3 style="font-size: 80%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
 			</section>
