some final changes

--- a/index.html
+++ b/index.html
@@ -45,46 +45,45 @@
 			<section data-background="images/science_fig4.png" data-background-size="contain">
 <!--<br><br><br><br><br><br>-->
 				<div style="background-color: rgba(0, 0, 0, 0.6); width:75%; margin:0 auto; text-align: center">
-				<h4 style="text-align: center; font-size: 160%; font-weight: bold">Research Highlights: Migration</h4>
+				<h4 style="text-align: center; font-size: 180%; font-weight: bold">Research Highlights: Migration</h4>
 <!--			<h4 style="text-align: center;font-size: 150%"><i>The Global Flow of People</i></h4>
 				<h5 style="text-align: center;font-size: 120%">Nikola Sander</h5>-->	
-				<h5 style="text-align: center;font-size: 120%">Wittgenstein Centre Celebrations,<br> Vienna, September 2015</h5>		
+				<h5 style="text-align: center;font-size: 130%">Wittgenstein Centre Celebrations,<br> Vienna, September 2015</h5>		
 				</div>
 			</section>
 			
 			<section>
 				<div style="width:80%; margin:0 auto; text-align: left">
-				<h2 style="font-size: 180%; font-weight: bold">3 Research Highlights</h2>
-				<h3 style="font-size: 170%">QUANTIFYING</h3>
-				<h3 style="font-size: 170%">VISUALISING</h3>
-				<h3 style="font-size: 170%">PROJECTING</h3>
-				<h3 style="font-size: 170%; color:#C3BCA5">international migration flows</h3>
+				<h2 style="font-size: 185%; font-weight: bold">3 Highlights</h2>
+				<h3 style="font-size: 175%"><em>Quantifying</em>,</h3>
+				<h3 style="font-size: 175%"><em>visualising</em> and</h3>
+				<h3 style="font-size: 175%"><em>projecting</em> global migration flows</h3>
 				</div>
 			</section>
 
 			<section>	
-				<h3 style="font-size: 165%">Migration can be defined in many different ways.</h3>
+				<h3 style="font-size: 185%">Migration can be defined in many different ways.</h3>
 				<img src="images/apple-orange.png" width="370" style="margin-left: 30%">
 			</section>
 
 			<section>	
-				<h3 style="font-size: 165%">Two types of migration data:<br> flows & stocks</h3>
+				<h3 style="font-size: 185%">Two types of migration data:<br> flows & stocks</h3>
 				<img src="images/unflow-2008-cover.png" width="370" style="margin-left: 10%">
 				<img src="images/unstock-2012-cover.png" width="348" style="margin-left: 5%">
 			</section>
 			
 			<section>
-				<h3 style="font-size: 165%">Our estimates: <em>0.6%</em> of the world's population move over 5-year periods</h3>
+				<h3 style="font-size: 185%">Our estimates: <em>0.6%</em> of the world's population move over 5-year periods</h3>
 				<img src="images/global-intensity.png"  width="650">
 				<p style="font-size: 140%">Abel & Sander (2014)<br><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows</a><br> <i>Science</i>, vol. 343: 1520-1522.</p> 				
 			</section>	
 
 			<section data-background="images/science_fig4_step2.png" data-background-size="contain">
-			<p style="font-size: 160%;width:70%; margin:0 auto; text-align: center; color:#ff9a15">Circular migration plot</p> 
+			<p style="font-size: 185%;width:70%; margin:0 auto; text-align: center; color:#ff9a15">Circular migration plot</p> 
 			<br>
 			<p style="width:70%; margin:0 auto; text-align: center">Segment length shows a region's migration volume in millions.</p> 
 			<br>
-			<p style="width:70%; margin:0 auto; text-align: center">Flows have the same colour as their origin. There's a gap at the destination.</p>
+			<p style="width:70%; margin:0 auto; text-align: center">Flows have the same colour as their origin.</p>
 			</section>
 
 			<section data-background="images/science_fig4.png" data-background-size="contain">
@@ -125,28 +124,26 @@
 			</section>
 			
 			<section>
-				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<h3 style="font-size: 185%">Hypothetical migration flows between Germany and Austria</h3>
 				<img src="images/ger-at1.png"  width="100%">
 				<p style="font-size: 100%; width:80%; margin:0 auto; text-align: center">.</p>							
 			</section>	
 
 			<section>
-				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<h3 style="font-size: 185%">There's no such thing as a net migrant!</h3>
 				<img src="images/ger-at2.png"  width="100%">	
-				<p style="font-size: 150%; width:80%; margin:0 auto; text-align: center"><em>There's no such thing as a net migrant!</em></p>			
 			</section>	
 
 			<section>
-				<h3 style="font-size: 165%">Projecting international migration:<br> from net to flow.</h3>
+				<h3 style="font-size: 185%">From a net migration model to a bi-regional projection model</h3>
 				<img src="images/world-at.png"  width="100%">
-				<p style="font-size: 150%; width:80%; margin:0 auto; text-align: center">Using a spatial aggregation of Andrei Rogers' multi-regional projection model.</p>							
 			</section>	
 
 
 			<section>
-				<h3 style="font-size: 165%">The global migration system: <br> today and in 2055-60</h3>
+				<h3 style="font-size: 185%">The global migration system: <br> in 2005-10 and in 2055-60</h3>
 				<img src="images/projections-circos.png"  width="100%">
-				<h3 style="font-size: 80%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
+				<h3 style="font-size: 90%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
 			</section>
 		
 		<!-- END SLIDES -->		
