include refugee slide

--- a/index.html
+++ b/index.html
@@ -45,24 +45,13 @@
 			<section data-background="images/science_fig4.png" data-background-size="contain">
 <!--<br><br><br><br><br><br>-->
 				<div style="background-color: rgba(0, 0, 0, 0.6); width:75%; margin:0 auto; text-align: center">
-				<h4 style="text-align: center; font-size: 180%; font-weight: bold">Research Highlights: Migration</h4>
-<!--			<h4 style="text-align: center;font-size: 150%"><i>The Global Flow of People</i></h4>
-				<h5 style="text-align: center;font-size: 120%">Nikola Sander</h5>-->	
-				<h5 style="text-align: center;font-size: 130%">Wittgenstein Centre Celebrations,<br> Vienna, September 2015</h5>		
+				<h4 style="text-align: center; font-size: 180%; font-weight: bold">Quantifying, visualising and projecting global migration flows</h4>
+				<h5 style="text-align: center;font-size: 130%">Nikola Sander<br> Vienna, September 2015</h5>		
 				</div>
 			</section>
 			
-			<section>
-				<div style="width:80%; margin:0 auto; text-align: left">
-				<h2 style="font-size: 185%; font-weight: bold">3 Highlights</h2>
-				<h3 style="font-size: 175%"><em>Quantifying</em>,</h3>
-				<h3 style="font-size: 175%"><em>visualising</em> and</h3>
-				<h3 style="font-size: 175%"><em>projecting</em> global migration flows</h3>
-				</div>
-			</section>
-
 			<section>	
-				<h3 style="font-size: 185%">Migration can be defined in many different ways.</h3>
+				<h3 style="font-size: 185%">Migration can be defined in many different ways</h3>
 				<img src="images/apple-orange.png" width="370" style="margin-left: 30%">
 			</section>
 
@@ -141,10 +130,18 @@
 
 
 			<section>
-				<h3 style="font-size: 185%">The global migration system: <br> in 2005-10 and in 2055-60</h3>
+				<h3 style="font-size: 185%">The global migration system <br> in 2005-10 and in 2055-60</h3>
 				<img src="images/projections-circos.png"  width="100%">
 				<h3 style="font-size: 90%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
 			</section>
+
+			<section data-background="images/refugees-2014.png" data-background-size="contain">
+			<div style="width:75%; margin:0 auto; text-align: center">
+			<p style="font-size: 185%;width:70%; margin:0 auto; text-align: center">The global flow<br> of refugees in 2014</p> 
+			<p style="font-size: 130%;width:70%; margin:0 auto; text-align: center"><em>www.global-refugees.info</em></p> 
+			</div>
+			</section>
+
 		
 		<!-- END SLIDES -->		
 		</div>
