--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 			</section>
 			
 			<section>
-				<h3 style="font-size: 185%">Our estimates: <em>0.6%</em> of the world's population move over 5-year periods</h3>
-				<img src="images/global-intensity.png"  width="650">
-				<p style="font-size: 140%">Abel & Sander (2014)<br><a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows</a><br> <i>Science</i>, vol. 343: 1520-1522.</p> 				
+				<p style="font-size: 140%">Abel & Sander (2014): <a href="http://www.sciencemag.org/content/343/6178/1520" target="_blank">Quantifying Global International Migration Flows.</a> <i>Science</i>, vol. 343: 1520-1522.</p> 		
+				<br>
+				<h3 style="font-size: 180%">Our estimates: <em>0.6%</em> of the world's population move over 5-year periods</h3>
+				<img src="images/global-intensity.png"  width="750">		
 			</section>	
 
 			<section data-background="images/science_fig4_step2.png" data-background-size="contain">
@@ -72,7 +73,7 @@
 			<br>
 			<p style="width:70%; margin:0 auto; text-align: center">Segment length shows a region's migration volume in millions.</p> 
 			<br>
-			<p style="width:70%; margin:0 auto; text-align: center">Flows have the same colour as their origin.</p>
+			<p style="width:60%; margin:0 auto; text-align: center">Flows have the same colour as their origin.</p>
 			</section>
 
 			<section data-background="images/science_fig4.png" data-background-size="contain">
@@ -135,10 +136,10 @@
 				<h3 style="font-size: 90%;text-align:center;color:#C3BCA5;margin: 0px 0 0 0">* iterative proportional fitting was used to estimate flows from projected numbers of in-migrants and out-migrants</h3>
 			</section>
 
-			<section data-background="images/refugees-2014.png" data-background-size="contain">
+			<section data-background="images/refugees-2014_1.png" data-background-size="contain">
 			<div style="width:75%; margin:0 auto; text-align: center">
-			<p style="font-size: 185%;width:70%; margin:0 auto; text-align: center">The global flow<br> of refugees in 2014</p> 
-			<p style="font-size: 130%;width:70%; margin:0 auto; text-align: center"><em>www.global-refugees.info</em></p> 
+			<p style="font-size: 180%;width:70%; margin:0 auto; text-align: center">The global flow<br> of refugees in 2014</p> 
+			<p style="font-size: 130%;width:70%; margin:0 auto; text-align: center"><em>global-refugees.info</em></p> 
 			</div>
 			</section>
 
