--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <!--<br><br><br><br><br><br>-->
 				<div style="background-color: rgba(0, 0, 0, 0.6); width:75%; margin:0 auto; text-align: center">
 				<h4 style="text-align: center; font-size: 180%; font-weight: bold">Quantifying, visualising and projecting global migration flows</h4>
-				<h5 style="text-align: center;font-size: 130%">Nikola Sander<br> Vienna, September 2015</h5>		
+				<h5 style="text-align: center;font-size: 130%">Nikola Sander<br> Vienna, September 2015</h5>	
+				<br><br>
+				<p><small>Slides at <a href="http://www.nikolasander.com/vid-anniversary/" target="_blank">nikolasander.com/vid-anniversary</a></small></p>	
 				</div>
 			</section>
 			
